# audio-bridge

./: CMakeLists.txt  README.md  deploy.sh  validate.sh
res/: audio-bridge.ttl  manifest.ttl
res/modgui/: icon.html  script.js  stylesheet.css
src/: AudioDevice.hpp  RingBuffer.hpp  Semaphore.hpp  audio-capture.cpp  audio-device-alsa.cpp  audio-device-capture.cpp  audio-device-discovery.cpp  audio-device-discovery.hpp  audio-device-impl-alsa.cpp  audio-device-impl-linux-mmap.cpp  audio-device-impl.hpp  audio-device-init.cpp  audio-device-init.hpp  audio-device-playback.cpp  audio-device.cpp  audio-device.hpp  audio-discovery.cpp  audio-discovery.hpp  audio-playback.cpp  audio-process.cpp  audio-process.hpp  audio-utils.hpp  jack-client.cpp  lv2-plugin.cpp  resampler-table.cc  test-jack-to-alsa.cpp  tests.cpp  vresampler.cc
src/zita-resampler/: resampler-table.h  vresampler.h
tests/: test.cpp
